# Typora

./: .gitignore  AGENTS.md  CHANGELOG.md  HANDOFF.md  README.md
C_context/: QA_Log.md  desktop_landing_plan.md  heptabase_like_data_model.md  logs.txt  typora_research.md
D_deliverables/ys-writer-desktop/: DESIGN_GUIDE.md  README.md  USER_GUIDE.md  USER_GUIDE.zh-CN.md  index.html  package-lock.json  package.json
D_deliverables/ys-writer-desktop/src/: App.tsx  styles.css
D_deliverables/ys-writer-desktop/src-tauri/: Cargo.toml  tauri.conf.json
D_deliverables/ys-writer-desktop/src-tauri/capabilities/: default.json
D_deliverables/ys-writer-desktop/src-tauri/icons/: icon.icns
D_deliverables/ys-writer-desktop/src-tauri/src/: commands.rs  fs_ops.rs  lib.rs  main.rs  model.rs  path_security.rs  safe_fs.rs  vault.rs
D_deliverables/ys-writer-desktop/src/app/: defaults.ts  i18n.ts  metadata.ts  types.ts
D_deliverables/ys-writer-desktop/src/command/: shortcuts.ts
D_deliverables/ys-writer-desktop/src/components/: MilkdownEditor.tsx
D_deliverables/ys-writer-desktop/src/data/: demoWorkspace.ts
D_deliverables/ys-writer-desktop/src/domain/: model.ts
D_deliverables/ys-writer-desktop/src/editor/: plainCommands.ts
D_deliverables/ys-writer-desktop/src/explorer/: tree.ts
D_deliverables/ys-writer-desktop/src/fs/: tauriFs.ts
D_deliverables/ys-writer-desktop/src/services/: files.ts  settings.ts
D_deliverables/ys_typora_app/: app.js  index.html  styles.css
R_raw/: prototype_capability_map.md
T_tools/: build_windows.ps1
(+16 files in other folders)
