[package]
name = "serein-desktop"
version = "0.0.1"
description = "Serein desktop Markdown writing application"
authors = ["Serein"]
edition = "2021"

[lib]
name = "serein_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
indexmap = { version = "1.9.3", features = ["std"] }
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
